--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <title>Cenas Rápidas y Saludables</title>
     
+    <!-- Google AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9353370245713442"
+     crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -213,7 +217,7 @@
                     recipes_title: "Nuestras Recetas Estrella", tips_title: "Consejos para Ahorrar Tiempo y Comer Mejor",
                     newsletter_title: "¡Únete a nuestra comunidad!", newsletter_text: "Recibe las nuevas recetas y los mejores consejos directamente en tu correo cada semana. ¡Sin spam!", newsletter_button: "Suscribirme", newsletter_placeholder: "Tu correo electrónico",
                     contact_title: "¿Tienes alguna pregunta?", contact_text: "Nos encantaría saber de ti. Si tienes alguna duda, sugerencia o simplemente quieres saludar, no dudes en escribirnos.",
-                    privacy_policy_title: "Política de Privacidad", privacy_policy_text: "En [Nombre de tu web], valoramos tu privacidad. La única información personal que recopilamos es la dirección de correo electrónico que proporcionas voluntariamente a través de nuestro formulario de suscripción. Usamos este correo exclusivamente para enviarte nuestras nuevas recetas y consejos. No compartimos tu información con terceros. Utilizamos cookies para mejorar la experiencia en nuestro sitio y para mostrar anuncios relevantes a través de Google AdSense. Puedes optar por desactivar las cookies en la configuración de tu navegador.",
+                    privacy_policy_title: "Política de Privacidad", privacy_policy_text: "En Cenas Rápidas y Saludables, valoramos tu privacidad. La única información personal que recopilamos es la dirección de correo electrónico que proporcionas voluntariamente a través de nuestro formulario de suscripción. Usamos este correo exclusivamente para enviarte nuestras nuevas recetas y consejos. No compartimos tu información con terceros. Utilizamos cookies para mejorar la experiencia en nuestro sitio y para mostrar anuncios relevantes a través de Google AdSense. Puedes optar por desactivar las cookies en la configuración de tu navegador.",
                     cookie_policy_title: "Política de Cookies", cookie_policy_text: "Este sitio web utiliza cookies para mejorar su experiencia. Las cookies son pequeños archivos de texto que se almacenan en su computadora o dispositivo móvil cuando visita un sitio web. Utilizamos cookies de sesión (que expiran cuando cierra su navegador) y cookies persistentes (que permanecen en su dispositivo durante un período determinado). También utilizamos cookies de terceros, como las de Google AdSense, para publicar anuncios basados en sus visitas anteriores a este u otros sitios web. Puede obtener más información sobre cómo Google utiliza los datos cuando utiliza los sitios o aplicaciones de nuestros socios en el sitio de Google. Al utilizar nuestro sitio, usted acepta nuestro uso de cookies.",
                     feedback_success: "¡Gracias por suscribirte!", feedback_error: "Email inválido o error. Inténtalo de nuevo.",
                     footer_text: "© 2025 Cenas Rápidas y Saludables | Creado con ❤️ para ti.",
@@ -242,7 +246,7 @@
                     recipes_title: "Our Star Recipes", tips_title: "Tips to Save Time and Eat Better",
                     newsletter_title: "Join our community!", newsletter_text: "Receive new recipes and the best tips directly in your email every week. No spam!", newsletter_button: "Subscribe", newsletter_placeholder: "Your email address",
                     contact_title: "Have a question?", contact_text: "We'd love to hear from you. If you have any questions, suggestions, or just want to say hello, don't hesitate to write to us.",
-                    privacy_policy_title: "Privacy Policy", privacy_policy_text: "At [Your Website Name], we value your privacy. The only personal information we collect is the email address you voluntarily provide through our subscription form. We use this email exclusively to send you our new recipes and tips. We do not share your information with third parties. We use cookies to improve the experience on our site and to display relevant ads through Google AdSense. You can choose to disable cookies in your browser settings.",
+                    privacy_policy_title: "Privacy Policy", privacy_policy_text: "At Quick & Healthy Dinners, we value your privacy. The only personal information we collect is the email address you voluntarily provide through our subscription form. We use this email exclusively to send you our new recipes and tips. We do not share your information with third parties. We use cookies to improve the experience on our site and to display relevant ads through Google AdSense. You can choose to disable cookies in your browser settings.",
                     cookie_policy_title: "Cookie Policy", cookie_policy_text: "This website uses cookies to enhance your experience. Cookies are small text files that are stored on your computer or mobile device when you visit a website. We use session cookies (which expire when you close your browser) and persistent cookies (which remain on your device for a set period). We also use third-party cookies, such as those from Google AdSense, to serve ads based on your prior visits to this or other websites. You can learn more about how Google uses data when you use our partners' sites or apps on Google's site. By using our site, you agree to our use of cookies.",
                     feedback_success: "Thanks for subscribing!", feedback_error: "Invalid email or error. Please try again.",
                     footer_text: "© 2025 Quick & Healthy Dinners | Made with ❤️ for you.",
@@ -271,7 +275,7 @@
                     recipes_title: "Наши звездные рецепты", tips_title: "Советы, как сэкономить время и питаться лучше",
                     newsletter_title: "Присоединяйтесь к нашему сообществу!", newsletter_text: "Получайте новые рецепты и лучшие советы прямо на вашу почту каждую неделю. Без спама!", newsletter_button: "Подписаться", newsletter_placeholder: "Ваш e-mail",
                     contact_title: "Есть вопрос?", contact_text: "Мы будем рады услышать от вас. Если у вас есть какие-либо вопросы, предложения или вы просто хотите поздороваться, не стесняйтесь писать нам.",
-                    privacy_policy_title: "Политика конфиденциальности", privacy_policy_text: "На [Название вашего сайта] мы ценим вашу конфиденциальность. Единственная личная информация, которую мы собираем, — это адрес электронной почты, который вы добровольно предоставляете через нашу форму подписки. Мы используем этот адрес исключительно для отправки вам наших новых рецептов и советов. Мы не передаем вашу информацию третьим лицам. Мы используем файлы cookie для улучшения работы нашего сайта и для показа релевантной рекламы через Google AdSense. Вы можете отключить файлы cookie в настройках вашего браузера.",
+                    privacy_policy_title: "Политика конфиденциальности", privacy_policy_text: "На 'Быстрые и здоровые ужины' мы ценим вашу конфиденциальность. Единственная личная информация, которую мы собираем, — это адрес электронной почты, который вы добровольно предоставляете через нашу форму подписки. Мы используем этот адрес исключительно для отправки вам наших новых рецептов и советов. Мы не передаем вашу информацию третьим лицам. Мы используем файлы cookie для улучшения работы нашего сайта и для показа релевантной рекламы через Google AdSense. Вы можете отключить файлы cookie в настройках вашего браузера.",
                     cookie_policy_title: "Политика в отношении файлов cookie", cookie_policy_text: "Этот веб-сайт использует файлы cookie для улучшения вашего опыта. Файлы cookie — это небольшие текстовые файлы, которые хранятся на вашем компьютере или мобильном устройстве, когда вы посещаете веб-сайт. Мы используем сеансовые файлы cookie (которые истекают, когда вы закрываете браузер) и постоянные файлы cookie (которые остаются на вашем устройстве в течение определенного периода). Мы также используем сторонние файлы cookie, например, от Google AdSense, для показа рекламы на основе ваших предыдущих посещений этого или других веб-сайтов. Вы можете узнать больше о том, как Google использует данные, когда вы используете сайты или приложения наших партнеров, на сайте Google. Используя наш сайт, вы соглашаетесь на использование нами файлов cookie.",
                     feedback_success: "Спасибо за подписку!", feedback_error: "Неверный email или ошибка. Попробуйте снова.",
                     footer_text: "© 2025 Быстрые и здоровые ужины | Сделано с ❤️ для вас.",
@@ -308,7 +312,13 @@
                 document.documentElement.lang = currentLang;
                 document.querySelectorAll('[data-translate]').forEach(el => {
                     const key = el.getAttribute('data-translate');
-                    el.textContent = content[currentLang][key] || '';
+                    // Replace placeholder for website name in privacy policy
+                    if (key === 'privacy_policy_text' || key === 'cookie_policy_text') {
+                         let text = content[currentLang][key] || '';
+                         el.textContent = text.replace(/\[(Nombre de tu web|Your Website Name|Название вашего сайта)\]/g, 'Cenas Rápidas y Saludables');
+                    } else {
+                        el.textContent = content[currentLang][key] || '';
+                    }
                 });
                 emailInput.placeholder = content[currentLang].newsletter_placeholder;
 
@@ -436,7 +446,7 @@
             function updateActiveLink() {
                 let currentSectionId = '';
                 sections.forEach(section => {
-                    if (pageYOffset >= section.offsetTop - 100) {
+                    if (window.pageYOffset >= section.offsetTop - 100) {
                         currentSectionId = section.getAttribute('id');
                     }
                 });
