--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Metadatos Optimizados para SEO y E-A-T -->
-    <title>Cenas Rápidas y Saludables | Recetas Fáciles para Cada Día</title>
-    <meta name="description" content="Descubre más de 15 recetas de cenas rápidas, fáciles y saludables, listas en menos de 30 minutos. Soluciones deliciosas para tu vida ocupada.">
-    <meta name="keywords" content="cenas rápidas, recetas saludables, comida fácil, recetas para estudiantes, cocinar rápido, cenas ligeras, recetas en 30 minutos">
-    <meta name="author" content="Cenas Rápidas y Saludables">
+    <title>Comidas Rápidas y Saludables | Recetas Fáciles para Cada Día</title>
+    <meta name="description" content="Descubre más de 15 recetas de comidas rápidas, fáciles y saludables, listas en menos de 30 minutos. Soluciones deliciosas para tu vida ocupada.">
+    <meta name="keywords" content="comidas rápidas, recetas saludables, comida fácil, recetas para estudiantes, cocinar rápido, cenas ligeras, recetas en 30 minutos">
+    <meta name="author" content="Comidas Rápidas y Saludables">
     <link rel="canonical" href="https://www.tusitiodecenasrapidas.com"> <!-- Cambia esto a tu dominio real -->
 
     <meta name="google-site-verification" content="7gdXI8hLMyXdI4Yz25h-TwDNg2XYobmbR8GeXGxD75g" />
